# Missing_Patch_Detector

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
missing_patch_detector/: __init__.py  __main__.py  cve_resolver.py  patch_collector.py  patch_presence_detector.py  pipeline.py  repo_scanner.py
missing_patch_detector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_cve_resolver.py  test_patch_collector.py  test_patch_presence_detector.py  test_pipeline.py  test_repo_scanner.py
